example/fail/parse_type4.dl

int $[main]{
    i<-5;//undeclared variable
}
